06-02-2013 7
Unittesten op MongoDB

31-01-2013 6
MongoDB aagepast op DELETE, dummy GET toegevoegd tbv test

31-01-2013 5
MongoDB aagepast

30-01 2013 4
Webservice toegevoegd

10-01-2013 3
MongoDB in ProjectBackofficeServiceMongoDB naamgeving gestopt

20-12-2012 2
MongoDB config toegevoegd (nog een harde verwijzing met OpenShift erin, moet dus nog anders)

20-12-2012 1
Applicatie op GitHub gedeployed, draait ook op CloudBees