@@ -2,6 +2,13 @@ package nl.googlethursday.projectbackoffice.service.mongodb;
 
 import java.net.UnknownHostException;
 
+import javax.annotation.PostConstruct;
+import javax.ejb.DependsOn;
+import javax.ejb.EJB;
+import javax.ejb.Stateless;
+
+import nl.googlethursday.projectbackoffice.helper.ConfigService;
+
 import com.mongodb.DB;
 import com.mongodb.Mongo;
 import com.mongodb.MongoException;
@@ -11,19 +18,25 @@ import com.mongodb.MongoException;
  * @author rodo
  *
  */
+@Stateless
+@DependsOn("ConfigService")
 public class MongoUtil {
 
+	// default openshift poort & ip adres + 
 	private static final int port = 27017;
 	private static final String host = "127.10.61.129";
-
 	public final static String USERNAME = "admin";
 	public final static String PWD = "Fe7WQ2cN2wp9";
 	private final static String databasenaam = "rodofumi";
+	
+	@EJB
+	private static ConfigService configService;
 	
 	private static Mongo mongo = null;
 
 	public static Mongo getMongo() {
 
+		
 		if (mongo == null) {
 			try {
 				mongo = new Mongo(host, port);
@@ -34,6 +47,12 @@ public class MongoUtil {
 			}
 		}
 		return mongo;
+	}
+
+	@PostConstruct
+	public void opstartSpul(){
+		System.out.println(configService.getProperty("IP"));
+
 	}
 	
 	public static DB getDB(Mongo mongodb){
