@@ -1,3 +1,7 @@
+20-02-2013 8
+Connectie voor unittesten aangepast
+
+Unittesten op MongoDB
 06-02-2013 7
 Unittesten op MongoDB
 
